--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Compiled class file
 *.class
 
+# Module file created by IntelliJ IDEA
+*.iml
+
+# IDEA folder used by IDE (IntelliJ)
+.idea
+
 # Log file
 *.log
 
